Adding Register and Login Swagger
